# miningVit

./: .gitignore  .pre-commit-config.yaml  Makefile  docker-compose-test.yml  docker-compose.yml  test-docker-compose.yml
api/: .dockerignore  Dockerfile  Dockerfile-test  alembic.ini  asgi.py  pyproject.toml
api/migrations/: env.py
api/src/: config.py  main.py
api/src/admin/: formatters.py  views.py
api/src/database/: db.py  models.py
api/src/dependencies/: auth.py
api/src/repositories/: MasterReferralRepository.py  UserRepository.py  base.py  finance_repository.py  machine_repository.py  purchased_machine_repository.py  redis_repository.py
api/src/routers/: auth.py  finance.py  machine.py  user.py
api/src/schemas/: base.py  common.py  email.py  errors.py  finance.py  machine.py  user.py
api/src/services/: email_service.py  finance_service.py  machine_service.py  redis_service.py  user_service.py
api/src/templates/email/: reset_password_email.html  verification_email.html
api/src/utils/: enums.py  error_handlers.py  initiate_data.py  repr.py  security.py  specific.py  validation_errors.py
api/tests/: conftest.py
api/tests/api/: conftest.py
api/tests/api/repositories/: conftest.py  test_user_repository.py
api/tests/api/routes/: conftest.py  test_auth.py  test_finance.py  test_user.py
api/tests/utils/: test_security.py  test_specific.py
